--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,14 +7,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+body{
+  background-color: #eee;
+}
 
-/* .sidebar-item{
-  padding: .75em 1em;
-  display: block;
-  transition: background-color .15s;
-  border-radius: 5px;
-} */
-/* .main{
-  display: flex;
-  height: 100vh;
-} */
